Back to FreeMono font, delete some redundant info

--- a/docs/PWDFT_docs.tex
+++ b/docs/PWDFT_docs.tex
@@ -8,6 +8,7 @@
 
 \usepackage{fontspec}
 \setmonofont{FreeMono}
+%\setmonofont{Source Code Pro}
 
 \usepackage{hyperref}
 \usepackage{url}
@@ -176,7 +177,6 @@ easier to program.
 %
 \textsf{PWDFT.jl} distribution contains several parameters
 of GTH pseudopotentials for LDA and GGA functionals.
-
 
 
 \section{Plane wave basis set}
